# zupfam

./: AGENTS.md  GEMINI.md  README.md  auth.py  config.py  crud.py  database.py  eslint.config.mjs  main.py  models.py  next.config.mjs  package-lock.json  package.json  requirements.txt  review_fetcher.py  scheduler.py  tailwind.config.ts
.gemini/commands/: implement_jules.md
.github/workflows/: ci.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
backend/: .gitignore  Dockerfile  README.Docker.md  compose.yaml  main.py  pyproject.toml
backend/constants/: enums.py  otp.py
backend/core/: config.py  db.py
backend/designs/: todo.md
backend/providers/: sms_client.py  whatsapp_client.py
backend/routers/: member_router.py
backend/schemas/: base.py  campaign.py  member.py
backend/utils/: crypto.py
designs/: .$uml.drawio.bkp  mvp1.md  roadmap.md  tv_pair.md  uml.drawio  user_flow.md  usp.md
designs/whiteboards/: zw1.HEIC  zw2.HEIC
frontend/: README.md  components.json  jest.config.js  next.config.ts  package-lock.json  package.json  vendor-routes.json
frontend/public/data/: dishes.csv  statuses.csv  store.csv
frontend/src/: i18n.ts
frontend/src/__tests__/: Dish.test.tsx  (+1 more)
jules-scratch/verification/: verify_yumm_feature.py
public/samples/: items.csv  reviews.csv  vendor.csv
specs/001-prompt-local-food/: plan.md  spec.md  tasks.md
specs/002-use-each-sheet/: plan.md  research.md  spec.md  tasks.md
src/app/: layout.tsx  page.tsx
src/i18n/: i18n.ts
src/lib/: providers.tsx
templates/: login.html
(+12 files in other folders)
