[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.10.0",
    "cffi==1.17.1",
    "click==8.2.1",
    "cryptography==45.0.7",
    "fastapi==0.116.1",
    "gunicorn>=23.0.0",
    "h11==0.16.0",
    "httpx>=0.28.1",
    "idna==3.10",
    "loguru>=0.7.3",
    "pycparser==2.22",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "pydantic-settings==2.10.1",
    "python-dotenv==1.1.1",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.43",
    "sqlmodel==0.0.24",
    "starlette==0.47.3",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.1",
    "uvicorn==0.35.0",
    "uvloop>=0.21.0",
]
